fix: use prototype's GoogleClientSecrets.load pattern for Gmail fetch + cleanup debug code